test/fail/func_cmp02.v3
//@seman
class func_cmp02_a {
	def c();
	def d();
}
class func_cmp02_b extends func_cmp02_a {
	def c();
	def d();
}
component func_cmp02 {
	def main(arg: int) -> bool {
		if (arg == 0) return func_cmp02_a.c == func_cmp02_a.c;
		if (arg == 1) return func_cmp02_a.d == func_cmp02_a.d;
		if (arg == 2) return func_cmp02_b.c == func_cmp02_b.c;
		if (arg == 3) return func_cmp02_b.d == func_cmp02_b.d;
		if (arg == 4) return func_cmp02_a.c == func_cmp02_b.c;
		if (arg == 5) return func_cmp02_a.d == func_cmp02_b.d;
		return false;
	}
}
